# yonk-robo-codemonkey

./: .env.example  .gitignore  .mcp.json  =6.0.0  BUGFIX_INCREMENTAL_INDEXING.md  CLAUDE.md  CONFIG.md  DESIGN_SEMANTIC_TAGGING.md  DESIGN_SLIDING_WINDOW_CHUNKS.md  FEATURE_BLURBS.md  MASTER_DOC.md  MCP_TOOLS.md  MCP_TOOLS_CLAUDE_MEMORY.md  MEMORY_BLURB_SUMMARIES_UNIVERSAL.md  QUICK_START_CONFIG.md  README.md  RUNBOOK.md  SCHEMA_ISOLATION_COMPLETE.md  SCHEMA_ISOLATION_VALIDATION.md  TESTING.md  TODO.md  docker-compose.yml  pyproject.toml  quick_start.sh  quick_teardown.sh  robomonkey-daemon.service  test_feature_context.py  test_mcp_server.py  test_schema_isolation.py
config/: codegraph-daemon.yaml  robomonkey-daemon.yaml  robomonkey-daemon.yaml.example
docker-deploy/: Dockerfile.daemon  Dockerfile.mcp  Dockerfile.ollama  Dockerfile.webui  README.md  docker-compose.yml
docs/: API_QUICKSTART.md  API_QUICK_REFERENCE.md  API_REFERENCE.md  API_SPECIFICATION.yaml  ARCHITECTURE.md  CLAUDE_DESKTOP_SETUP.md  CONFIG.md  DEVELOPERS_GUIDE.md  DOCUMENTATION_INDEX.md  INSTALL.md  MASTER_DOC.md  MCP_CONFIG.md  MCP_TOOLS.md  MCP_TOOLS_QUICK_REFERENCE.md  MIGRATION_SUMMARY.md  QUICKSTART.md  SCHEMA_ISOLATION_COMPLETE.md  SEMANTIC_TAGGING.md  USER_GUIDE.md  kb-models-draft.py  kb-schema-draft.sql  knowledge-base-implementation.md  pdf-chunking-improvements.md  session-work-summary.md
embedding-service/: Dockerfile  README.md  download_models.py  main.py  requirements.txt
rules/: migration_rules.yaml
scripts/: apply_migration.sh  cleanup_test_repos.py  daemon-start.sh  daemon-stop.sh  db-rebuild.sh  db-start.sh  dev_run.sh  docker-compose.sh  embed_repo_direct.py  init_db.sql  (+15 more)
(+213 files in other folders)
