[project]
name = "yonk-code-robomonkey"
version = "0.1.0"
description = "Local-first RoboMonkey MCP server with Postgres+pgvector+FTS+tags+docs"
requires-python = ">=3.11"
dependencies = [
  "asyncpg>=0.29.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "rich>=13.7.1",
  "watchdog>=4.0.1",
  "pathspec>=0.12.1",
  "tree-sitter==0.20.4",
  "tree-sitter-languages>=1.10.2",
  "typing-extensions>=4.11.0",
  "orjson>=3.10.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pyyaml>=6.0.0",
  "mcp>=1.25.0",
  "sqlglot>=20.0.0",
  # Web UI
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.9",
  # Document/PDF processing
  "pdfplumber>=0.10.0",
  "beautifulsoup4>=4.12.0",
  "markdown-it-py>=3.0.0",
  "tiktoken>=0.5.0",  # For accurate token counting
]

[project.scripts]
robomonkey = "yonk_code_robomonkey.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
